--- a/vignettes/Randomisation.Rmd
+++ b/vignettes/Randomisation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Randomising communitiy matrices"
+title: "Manipulating community matrices"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Randomisation}
@@ -20,12 +20,8 @@ library(Feedbackloops)
 ```
 
 
-The goal of the randomization procedure is to destroy certain network structures that are present in the real network and to analyze the effects of these structures on network stability (measured by the real part of the dominant eigenvalue $Re(\lambda_d)$ and feedback structure (measured by the coefficients of the characteristic polynomial). The following types of randomisation procedures are used:
- 
- * Full randomization where all interspecific interactions strengths are randomly assigned a new position in the matrix. During this procedure all feedback loops $>1$ are destroyed
- * pairwise randomization were pairwise interactions are kept the same but the pairs are reassigned.
+We use manipulation procedures to disentangle the effects of different network structures from each other. Each procedure is designed to destroy certain aspects of the structure of an empirical matrix. By comparing the properties of randomised matrices to empirical matrices, we can analyse the effect of these structural elements. 
 
-In all procedures, the diagonals are left untouched. Also, the topology of the network is preserved so that species that do not interact in the original network also do not interact in the randomised ones. 
 
 ```{r}
 path_competition <- "Competition_Signy_1.csv"
@@ -40,7 +36,54 @@ interaction_table <- interaction_strengths(contact_matrix, abundance, c(-0.1, -0
 head(interaction_table)
 ```
 
-Interaction strengths are randomised within the table of pairwise interactions: Each randomisation function adds a two new columns to this interaction table, which contain the same $a_ {ij}$ and $a_{ji}$ values, but their order is randomised according to certain rules. After this the function *assemble_jacobian()* reorders the randomised interaction strengths into the community matrix. This works in the same way as with the empirical matrix, according to the order defined in species list but it chooses the interaction strengths from the randomised columns. Values in the column *a_ij* column are assigned to the lower diagonal of the community matrix, while the values in the *a_ji* column are sorted above the diagonal.  
+Interaction strengths are randomised within the table of pairwise interactions: Each randomisation function adds a two new columns to this interaction table, which contain the same $a_ {ij}$ and $a_{ji}$ values, but their order is randomised according to certain rules. After this the function *assemble_jacobian()* reorders the randomised interaction strengths into the community matrix. This works in the same way as with the empirical matrix, according to the order defined in species list, but it chooses the interaction strengths from the randomised columns. Pairwise interaction appear in the same row of the two columns. Values in the column *a_ij* column are assigned to the lower diagonal of the community matrix, while the values in the *a_ji* column are sorted above the diagonal.  
+
+A manipulation procedure can be defined with the following template: 
+
+```{r, eval = FALSE}
+
+randomize_xy <- function(df, ij_col, ji_col){
+  
+  #add two new columns to df to store randomized interaction pairs
+  z = length(df$Species_i)
+  df$a_ij_rand <- vector("numeric", z)
+  df$a_ji_rand <- vector("numeric", z)
+  
+  #pick all interspecific interactions from df 
+  #(intraspecific interactions are not randomized)
+  df_inter <-  df[df$Species_i != df$Species_j,]
+  n = length(df_inter$Species_i)
+  
+  
+  #create a new vector, in which the order of interaction strengths is changed
+  #according to some rule
+  vec <- sample(c(df_inter[[ij_col]], df_inter[[ji_col]]))
+  
+  #fill randomized values back into the new columns in df 
+  df_inter$a_ij_rand <- vec[1:n]
+  df_inter$a_ji_rand <- vec[(1+n):(n*2)]
+  
+  #sort df_inter values back into the original df 
+  df[df$Species_i != df$Species_j,] <- df_inter
+  
+  #return the same data frame with the new columns 
+  return(df)
+}
+```
+
+
+The following types of randomisation procedures are currently used to disentangle the role of asymmetry in pairwise interactions from community level asymmetry (see man pages for details on the functions):
+ 
+ * **Full randomization**: All interspecific interactions strengths are randomly assigned a new position in the matrix. During this procedure all feedback loops of lengths $>1$ are destroyed and with that both pairwise as well as community asymmetry
+ * **Pairwise randomization**: Pairs of interactions strengths (the rows of the interaction table) are kept the same but the position of pairs within the network is reassigned. 2-link loops, and with that pairwise asymmetry are preserved. All structures associated with longer loops, like community asymmetry are destroyed. 
+ 
+In addition, we use two procedures to artificially reconstruct pairwise and community asymmetry in randomised matrices: 
+
+* **Pairwise asymmetry**: Reshuffles all elements to create a matrix that is as pairwise asymmetric as possible. To do this, all links are first sorted by their magnitude. Then, the very largest link is paired with the smallest, the second largest with the second smallest, etc. The pairs are then assigned a random position in the network, so that there is no community asymmetry
+
+* **Pairwise + community asymmetry**: In addition to maximising pairwise asymmetry, this procedure also creates community asymmetry by sorting all stronger links on one side of the matrix diagonal (one column of the interaction table) and all weaker links on the other side (other column of the interaction table).
+
+In all procedures, the diagonals are left untouched. Also, the topology of the network is preserved so that species that do not interact in the original network also do not interact in the randomised ones. 
 
 
 ### Apply randomisation functions to a network
