--- a/vignettes/Randomisation.Rmd
+++ b/vignettes/Randomisation.Rmd
@@ -106,7 +106,7 @@ To build randomised community matrices, assemble_jacobian() is used. It needs th
 ```{r}
 Jacobian_rand <- assemble_jacobian(interaction_table = interaction_table,
                                    species_list = abundance[,1] ,
-                                   ij_col = "a_ij_rand", ji_col = "a_ij_rand")
+                                   ij_col = "a_ij_rand", ji_col = "a_ji_rand")
 Jacobian_pw <- assemble_jacobian(interaction_table = interaction_table, 
                                  species_list = abundance[,1],
                                  ij_col = "a_ij_pw", ji_col = "a_ji_pw")
@@ -151,7 +151,7 @@ analyse_jacobian <- function(Jacobian,site_name, type, replacement = 0.1){
   F2 <- charpoly[3]*-1
   F3 <- charpoly[4]*-1
   
-  ###get region from the site name################################
+  ##get region from the site name################################
   site_region = unlist(strsplit(site_name, "_"))[[1]]
   
   return(data.frame(name = site_name, region = site_region,
